TODO: Z-Lift-Bug seems to be still present! Avoid Z-Lift: Todo @Conrad -> Has this possibly been fixed by removing halfstepping in 1.37u4?
TODO: Maybe tracing down communication errors which seem to appear from time to time (but dont have any effect because they get autocorrected within ~12ms.)
TODO: Testing, testing ..

V RF.01.41.07.Mod alpha (2018-03-14) 
- Support for REPETIER_PROTOCOL:3

V RF.01.41.06.Mod alpha (2018-03-13) 
- more testing on serial -> Fletcher error correction really seems to work flawless.
- re-/implemented some debugging gode for serial errors
- fixed formats in GCode::printCommand()
- fixed sending Com::tWrongChecksum when using parseBinary (I once forgot newline)
- we temporarily set Z_ENDSTOP_MAX_HYSTERESIS 0.5f for mhiers tests

V RF.01.41.05.Mod alpha (2018-03-12) 
- corrected unit calculation in void Printer::MemoryPosition()
- rise of LOW_TICKS_PER_MOVE to 500k (It might not have a big effect but maybe on some parts)
- removed some old TODOs on which I am now absolut sure how to handle them.
- dont show "setTemperatureForExtruder(): cant set Temp for Extr." when it is set to 0°C.
- switched MOVE_CACHE back to 17 for testing reasons.
- update void Printer::MemoryPosition() close towards repetier
- fix missing PSTR -> https://github.com/repetier/Repetier-Firmware/issues/763
- deleted UI_ANIMATION and some unused functions

V RF.01.41.04.Mod alpha (2018-03-12) 
- added FEATURE_DEBUG_MOVE_CACHE_TIMING to debug movecache fill while printing.
    if you want to adjust LOW_TICKS_PER_MOVE to default: M3993 P300000 (LOW_TICKS_PER_MOVE is 300000)
    if you want to read and drop statistics:             M3993

V RF.01.41.03.Mod alpha (2018-03-10) 
- some tiny tweaks
- cleanup of homeZ for better reading. Inserted a lot of casts.
- removed some functions which are not needed anymore because their purpose already got removed.

V RF.01.41.02.Mod alpha (2018-03-10) 
This is the "intelligent filament load update"